fix z-index su header

--- a/scss/parts/header.scss
+++ b/scss/parts/header.scss
@@ -50,7 +50,7 @@ body {
 .flc-main-nav {
   background-color: $primary;
   position: fixed;
-  z-index: 3;
+  z-index: 5;
   top: var(--admin-offset);
   left: 0;
   right: 0;
@@ -367,15 +367,15 @@ body {
   border: none;
   background-color: $primary !important;
   transform: none !important;
-  &.show{
-      display: flex !important;
+  &.show {
+    display: flex !important;
   }
-  > .container-fluid{
-      height: calc(100vh - $header-bar-height) !important;
-      overflow-y: scroll;
+  > .container-fluid {
+    height: calc(100vh - $header-bar-height) !important;
+    overflow-y: scroll;
   }
   @include media-breakpoint-down(uxl) {
-      top: 79px !important; /* Si posiziona sotto la navbar */
-      height: calc(100vh - 79px) !important;
+    top: 79px !important; /* Si posiziona sotto la navbar */
+    height: calc(100vh - 79px) !important;
   }
 }
